--- a/GroupWork/DesignDocumentDraft1/DesignDocumentDraft1.tex
+++ b/GroupWork/DesignDocumentDraft1/DesignDocumentDraft1.tex
@@ -1,5 +1,5 @@
 \documentclass[onecolumn, draftclsnofoot, 10pt, compsoc]{IEEEtran}
-\usepackage[utf8]{inputenc}
+%\usepackage[utf8]{inputenc}
 \usepackage[margin=0.75in]{geometry}
 
 \title{Auction Hunter \\ Design Document Draft 1\\CS 461 - Fall 2018}
