--- a/GroupWork/DesignDocumentDraft2/main.tex
+++ b/GroupWork/DesignDocumentDraft2/main.tex
@@ -8,6 +8,8 @@
 %\usepackage{pgfgantt}
 \usepackage{listings}
 
+\renewcommand{\arraystretch}{1.7}
+
 % 1. Fill in these details
 \def \CapstoneTeamName{		Auction Hunter}
 \def \CapstoneTeamNumber{		4}
@@ -75,7 +77,20 @@
 
 \newpage
 \tableofcontents
+
+\section{Change Log}
+\begin{table}[!h]
+\begin{tabular}{p{4cm}|p{5cm}|p{7cm}}
+Section & Original & New \\
+\cline{1-3}
+Title Page & Custom Title Page &   Used default CS capstone title page formatting.   \\
+2.3 - Context       & Mentioned Teslas specifically        & Removed all mentions of Teslas. Replaced general "vehicles"   \\
+\end{tabular}
+\end{table}
+
 \newpage
+
+
 
 \section{Introduction}
 \subsection{Purpose}
